Изменен путь для запуска тестов

--- a/Lab2/1_test_case.html
+++ b/Lab2/1_test_case.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/First/basicServlet</td>
+	<td>/Main</td>
 	<td></td>
 </tr>
 <tr>
@@ -48,12 +48,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=#status</td>
+	<td>css=h1</td>
 	<td>Книга успешно добавлена.</td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>/First/basicServlet</td>
+	<td>/Main</td>
 	<td></td>
 </tr>
 <tr>
@@ -88,12 +88,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=#status</td>
+	<td>css=h1</td>
 	<td>Книга успешно добавлена.</td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>/First/basicServlet</td>
+	<td>/Main</td>
 	<td></td>
 </tr>
 <tr>
@@ -128,12 +128,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=#status</td>
+	<td>css=h1</td>
 	<td>Книга успешно добавлена.</td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>/First/basicServlet</td>
+	<td>/Main</td>
 	<td></td>
 </tr>
 <tr>
@@ -168,12 +168,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=#status</td>
+	<td>css=h1</td>
 	<td>Книга успешно добавлена.</td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>/First/basicServlet</td>
+	<td>/Main</td>
 	<td></td>
 </tr>
 <tr>
@@ -208,7 +208,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=#status</td>
+	<td>css=h1</td>
 	<td>Книга успешно добавлена.</td>
 </tr>
 </tbody></table>
